# replog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.env  docker-compose-dev.yml  docker-compose.yml  log-config.yml  replica.proto
master/: .dockerignore  Cargo.toml  Dockerfile
master/src/: main.rs  message.rs
proto/: joinreq.proto  replica.proto  syncreq.proto
src/: lib.rs  master.rs  message.rs  secondary.rs  utils.rs
src/common/: heartbeats.rs  message.rs  retry.rs  utils.rs
src/master/: circuit_breaker.rs  join_listener.rs  main.rs  replicator_client.rs
src/secondary/: join_requester.rs  main.rs  replicator_server.rs
