[package]
name = "replog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "master"
path = "src/master/main.rs"

[[bin]]
name = "secondary"
path = "src/secondary/main.rs"


[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
actix-web = "4.3.1"
tokio = "1.29.1"
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
log4rs = { version = "1.2.0", features = ["default"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
log = { version = "0.4.19", features = ["max_level_debug"] }

[build-dependencies]
tonic-build = "0.9.2"
