[package]
name = "replog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "master"
path = "src/master/main.rs"

[[bin]]
name = "secondary"
path = "src/secondary/main.rs"


[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
prost = "0.11.9"
tonic = "0.9.2"
tonic-health = "0.9.2"
tokio = "1.29.1"
futures = "0.3.28"
actix-web = "4.3.1"
async-channel = "1.8.0"
serde = { version = "1.0.164", features = ["derive"] }
log4rs = { version = "1.2.0", features = ["default"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
log = { version = "0.4.19", features = ["max_level_debug"] }
tower = { version = "0.4.13", features = ["default", "retry", "reconnect"] }

[build-dependencies]
tonic-build = "0.9.2"
